--- a/style.css
+++ b/style.css
@@ -10,9 +10,8 @@ h1 {
 
 #featured-property {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
+  margin: auto;
+ 
 }
 
 nav > a {
